# hvr-xml

./: .gitignore  AddPPA.sh  CMakeLists.txt  InstallTest.sh  Lint.sh  README.md
.ci/azure-pipelines/: build-pullrequest-ubuntu.yml  build-pullrequest-windows.yml  build-unit-test-ubuntu.yml  build-unit-test-windows.yml
.ci/scripts/: InstallTest.sh
.github/: issue_template.md
apps/: CMakeLists.txt
apps/Sample/: CMakeLists.txt  cam_settings.xml  config_v02.xml
apps/Sample/src/: Sample.cpp
apps/XMLSample/: CMakeLists.txt  sample.xml
apps/XMLSample/src/: XMLSample.cpp
doc/: CMakeLists.txt  info.dox
modules/: CMakeLists.txt
modules/XML/: CMakeLists.txt
modules/XML/include/Hvr/XML/: XMLNode.h  XMLParser.h  XMLWriter.h
modules/XML/src/: XMLNode.cpp  XMLParser.cpp  XMLWriter.cpp
modules/XMLParser/: CMakeLists.txt  info.dox
modules/XMLParser/include/Hvr/XMLParser/: XMLNode.h  XMLParser.h  XMLWriter.h
modules/XMLParser/src/: XMLNode.cpp  XMLParser.cpp  XMLWriter.cpp
unit-test/: CMakeLists.txt  gtest.txt
unit-test/XML/: CMakeLists.txt
unit-test/XML/data/xml_data/xml_node_data/: sample.xml
unit-test/XML/data/xml_data/xml_writer_data/: sample.xml
unit-test/XML/include/: XMLTest.h
unit-test/XML/src/: XMLTest.cpp  main.cpp
unit-test/XMLParser/: CMakeLists.txt
unit-test/XMLParser/include/: XMLParserTest.h
unit-test/XMLParser/src/: XMLParserTest.cpp
vcpkg/: CONTROL  portfile.cmake
